--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: User Guides
-baseurl: "/user-guides" # the subpath of your site, e.g. /blog
+baseurl: "/ex-user-guides" # the subpath of your site, e.g. /blog
 
 # Build settings
 remote_theme: pmarsceill/just-the-docs
